--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 			<artifactId>spoon-core</artifactId>
 			<version>3.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.martiansoftware</groupId>
+			<artifactId>jsap</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
@@ -22,17 +27,46 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2.1</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<mainClass>spoon.Launcher</mainClass>
-					<arguments>
-						<argument>-i</argument>
-						<argument>src</argument>
-						<argument>-p</argument>
-						<argument>github.tdurieux.spoon.initiation.processor.CatchProcessor</argument>
-					</arguments>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>github.tdurieux.spoon.main.Main</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<finalName>${artifactId}-${version}</finalName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>github.tdurieux.spoon.main.Main</mainClass>
+							<packageName>github.tdurieux.spoon.main</packageName>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
