--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,17 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-		<dependency>
-			<groupId>fr.inria.gforge.spoon</groupId>
-			<artifactId>spoon-core</artifactId>
-			<version>3.0-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>fr.inria.gforge.spoon</groupId>
+            <artifactId>spoon-core</artifactId>
+            <version>4.2.0</version>
+        </dependency>
 		<dependency>
 			<groupId>com.martiansoftware</groupId>
 			<artifactId>jsap</artifactId>
 			<version>2.1</version>
 		</dependency>
 	</dependencies>
-	<repositories>
-		<repository>
-			<id>gforge.inria.fr-snapshot</id>
-			<name>Maven Repository for Spoon Snapshot</name>
-			<url>http://spoon.gforge.inria.fr/repositories/snapshots/</url>
-			<snapshots />
-		</repository>
-	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -38,7 +30,6 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-					<mainClass>github.tdurieux.dependencyAnalyzer.main.GUILauncher</mainClass>
 				</configuration>
 			</plugin>
 			<plugin>
